--- a/bower.json
+++ b/bower.json
@@ -32,5 +32,8 @@
     "angular-cookies": "^1.5.3",
     "ng-click-toggle": "ah450/ng-click-toggle",
     "ng-click-remove": "ah450/ng-click-remove"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.5.3"
   }
 }
