--- a/package.json
+++ b/package.json
@@ -50,5 +50,14 @@
     "merge2": "^1.0.1",
     "minimist": "^1.2.0",
     "rimraf": "^2.5.2"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "karma": "^0.13.22",
+    "karma-chai-plugins": "^0.7.0",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-coverage": "^0.5.5",
+    "karma-mocha": "^0.2.2",
+    "mocha": "^2.4.5"
   }
 }
