--- a/bower.json
+++ b/bower.json
@@ -27,11 +27,11 @@
     "angular-ui-router-title": "^0.0.4",
     "angular-messages": "^1.5.3",
     "angular-animate": "^1.5.3",
-    "guclink-constants": "ah450/guclink-constants",
-    "guclink-satellizer-decorator": "ah450/guclink-satellizer-decorator",
+    "guclink-constants": "ah450/guclink-constants#master",
+    "guclink-satellizer-decorator": "ah450/guclink-satellizer-decorator#master",
     "angular-cookies": "^1.5.3",
-    "ng-click-toggle": "ah450/ng-click-toggle",
-    "ng-click-remove": "ah450/ng-click-remove"
+    "ng-click-toggle": "ah450/ng-click-toggle#master",
+    "ng-click-remove": "ah450/ng-click-remove#master"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.3"
