--- a/package.json
+++ b/package.json
@@ -20,37 +20,38 @@
   },
   "homepage": "https://github.com/ah450/guclink-www#readme",
   "dependencies": {
-    "autoprefixer": "^6.3.6",
-    "bower": "^1.7.7",
-    "coffeelint-stylish": "^0.1.2",
-    "fs": "0.0.2",
-    "gulp": "^3.9.1",
-    "gulp-angular-templatecache": "^1.8.0",
-    "gulp-bower": "0.0.13",
-    "gulp-coffee": "^2.3.2",
-    "gulp-coffeelint": "^0.6.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-concat-css": "^2.2.0",
-    "gulp-connect": "^3.2.2",
-    "gulp-cssnano": "^2.1.1",
-    "gulp-gzip": "^1.2.0",
-    "gulp-htmlmin": "^1.3.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-modernizr": "^1.0.0-alpha",
-    "gulp-ng-annotate": "^2.0.0",
-    "gulp-order": "^1.1.1",
-    "gulp-postcss": "^6.1.0",
-    "gulp-sass": "^2.2.0",
-    "gulp-uglify": "^1.5.3",
-    "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.5",
-    "jshint": "^2.9.1",
-    "jshint-stylish": "^2.1.0",
-    "main-bower-files": "^2.11.1",
-    "merge2": "^1.0.1",
-    "minimist": "^1.2.0",
-    "rimraf": "^2.5.2"
-  },
+  "autoprefixer": "^6.3.6",
+  "bower": "^1.7.7",
+  "coffeelint-stylish": "^0.1.2",
+  "fs": "0.0.2",
+  "gulp": "^3.9.1",
+  "gulp-angular-templatecache": "^1.8.0",
+  "gulp-bower": "0.0.13",
+  "gulp-coffee": "^2.3.2",
+  "gulp-coffeelint": "^0.6.0",
+  "gulp-concat": "^2.6.0",
+  "gulp-concat-css": "^2.2.0",
+  "gulp-connect": "^3.2.2",
+  "gulp-cssnano": "^2.1.1",
+  "gulp-gzip": "^1.2.0",
+  "gulp-htmlmin": "^1.3.0",
+  "gulp-install": "^0.6.0",
+  "gulp-jshint": "^2.0.0",
+  "gulp-modernizr": "^1.0.0-alpha",
+  "gulp-ng-annotate": "^2.0.0",
+  "gulp-order": "^1.1.1",
+  "gulp-postcss": "^6.1.0",
+  "gulp-sass": "^2.2.0",
+  "gulp-uglify": "^1.5.3",
+  "gulp-util": "^3.0.7",
+  "gulp-watch": "^4.3.5",
+  "jshint": "^2.9.1",
+  "jshint-stylish": "^2.1.0",
+  "main-bower-files": "^2.11.1",
+  "merge2": "^1.0.1",
+  "minimist": "^1.2.0",
+  "rimraf": "^2.5.2"
+},
   "devDependencies": {
     "chai": "^3.5.0",
     "karma": "^0.13.22",
